# cubes

./: Cargo.toml
src/: main.rs
