[package]
name = "cubes"
version = "0.1.0"
authors = ["George Morgan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24.0"
futures = "0.3.14"
wgpu = "0.7.1"
shaderc = "0.7.2"
bytemuck = { version = "1.5.1", features = [ "derive" ] }
nalgebra = "0.26.1"
